[TWIG-DEMO] Replace block handling with getIndexIterator() calls

--- a/install-profiles/demo-cms-twig/app/Resources/views/Includes/sidebar.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Includes/sidebar.html.twig
@@ -2,11 +2,8 @@
 
 {{ block('editmode_header') }}
 
-{% set teaserBlock = pimcore_block('teasers') %}
-
 <div class="teasers">
-    {% for i in (0..(teaserBlock.count-1)) %}
-        {% do teaserBlock.loop() %}
+    {% for i in pimcore_block('teasers').getIndexIterator() %}
         {{ pimcore_snippet('teaser') }}
     {% endfor %}
 </div>
