--- a/install-profiles/demo-cms-twig/app/Resources/views/Areas/embed/view.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Areas/embed/view.html.twig
@@ -2,11 +2,7 @@
     <div class="row">
 
         {% for i in 1..2 %}
-            {% set contentBlock = pimcore_block('contents_' ~ i) %}
-
-            {% for i in (0..(contentBlock.count-1)) %}
-                {% do contentBlock.loop() %}
-
+            {% for i in pimcore_block('contents_' ~ i).getIndexIterator() %}
                 <div class="embed">
                     {{ pimcore_embed('socialContent', {
                         width: 426,
