--- a/install-profiles/demo-cms-twig/app/Resources/views/Areas/text-accordion/view.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Areas/text-accordion/view.html.twig
@@ -4,9 +4,7 @@
 <section class="area-text-accordion">
     <div class="panel-group" id="{{ id }}">
 
-        {% for i in (0..(accordionBlock.count-1)) %}
-            {% do accordionBlock.loop() %}
-
+        {% for i in accordionBlock.getIndexIterator() %}
             {% set entryId = id ~ '-' ~ accordionBlock.getCurrent() %}
             {% set stateClass = (editmode or (accordionBlock.getCurrent() == 0)) ? 'in' %}
 
