--- a/install-profiles/demo-cms-twig/app/Resources/views/Includes/footer.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Includes/footer.html.twig
@@ -11,9 +11,7 @@
 
     <p class="links">
         &copy; {{ "now"|date('Y') }} pimcore GmbH &middot;
-        {% set linksBlock = pimcore_block('links') %}
-        {% for i in (0..(linksBlock.count-1)) %}
-            {% do linksBlock.loop() %}
+        {% for i in pimcore_block('links').getIndexIterator() %}
             {{ pimcore_link('link') }}
         {% endfor %}
     </p>
