--- a/install-profiles/demo-cms-twig/app/Resources/views/Areas/embed/view.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Areas/embed/view.html.twig
@@ -2,7 +2,7 @@
     <div class="row">
 
         {% for i in 1..2 %}
-            {% for i in pimcore_block('contents_' ~ i).getIndexIterator() %}
+            {% for i in pimcore_iterate_block(pimcore_block('contents_' ~ i)) %}
                 <div class="embed">
                     {{ pimcore_embed('socialContent', {
                         width: 426,
