--- a/install-profiles/demo-cms-twig/app/Resources/views/Areas/gallery-single-images/view.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Areas/gallery-single-images/view.html.twig
@@ -1,7 +1,7 @@
 <section class="area-gallery-single-images">
     <div class="row">
 
-        {% for i in pimcore_block('gallery').getIndexIterator() %}
+        {% for i in pimcore_iterate_block(pimcore_block('gallery')) %}
             <div class="col-md-3 col-xs-6">
                 {% if not editmode %}
                     <a href="{{ pimcore_image('image').getThumbnail('galleryLightbox') }}" class="thumbnail">
