--- a/install-profiles/demo-cms-twig/app/Resources/views/Includes/sidebar.html.twig
+++ b/install-profiles/demo-cms-twig/app/Resources/views/Includes/sidebar.html.twig
@@ -3,7 +3,7 @@
 {{ block('editmode_header') }}
 
 <div class="teasers">
-    {% for i in pimcore_block('teasers').getIndexIterator() %}
+    {% for i in pimcore_iterate_block(pimcore_block('teasers')) %}
         {{ pimcore_snippet('teaser') }}
     {% endfor %}
 </div>
